--- a/Session/src/main/res/layout/activity_home.xml
+++ b/Session/src/main/res/layout/activity_home.xml
@@ -59,4 +59,15 @@
         android:elevation="15dp"
         android:onClick="AddArtistToUser"
         android:text="+" />
+
+    <ProgressBar
+        android:id="@+id/progressBarImageView"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textViewArtistTag"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_toLeftOf="@+id/addArtistButton"
+        android:layout_toStartOf="@+id/addArtistButton" />
 </RelativeLayout>
