--- a/Session/src/main/res/layout/activity_home.xml
+++ b/Session/src/main/res/layout/activity_home.xml
@@ -6,68 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.parse.session.HomeActivity">
 
-    <ListView
-        android:id="@+id/artistsListView"
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:layout_below="@+id/artistImageView" />
-
-    <ImageView
-        android:id="@+id/artistImageView"
-        android:layout_width="174dp"
-        android:layout_height="174dp"
-        app:srcCompat="@color/common_google_signin_btn_text_light_pressed"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        app:itemTextColor="@android:color/background_dark"
+        app:menu="@menu/navbar" />
 
     <TextView
-        android:id="@+id/textViewArtistName"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="29dp"
-        android:text="Artist Name"
-        android:textAlignment="viewStart"
-        android:textSize="24sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/textViewArtistTag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textViewArtistName"
-        android:layout_marginTop="33dp"
-        android:text="Artist Tag"
-        android:textAlignment="viewStart" />
 
-    <Button
-        android:id="@+id/addArtistButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_above="@+id/artistsListView"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:elevation="15dp"
-        android:onClick="AddArtistToUser"
-        android:text="+" />
-
-    <ProgressBar
-        android:id="@+id/progressBarImageView"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textViewArtistTag"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_toLeftOf="@+id/addArtistButton"
-        android:layout_toStartOf="@+id/addArtistButton" />
 </RelativeLayout>
