--- a/Session/src/main/res/menu/navbar.xml
+++ b/Session/src/main/res/menu/navbar.xml
@@ -19,4 +19,12 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="Notifications"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_profile"
+        android:enabled="true"
+        android:icon="@drawable/ic_account_circle_black_24dp"
+        android:title="Account"
+        app:showAsAction="ifRoom" />
+
 </menu>
