--- a/Session/src/main/res/layout/activity_view_artist.xml
+++ b/Session/src/main/res/layout/activity_view_artist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.parse.session.ViewArtistActivity">
+    tools:context="com.parse.session.ViewArtistFragment">
 
     <ListView
         android:id="@+id/artistsListView"
