--- a/Session/src/main/res/layout/music_fragment.xml
+++ b/Session/src/main/res/layout/music_fragment.xml
@@ -1,13 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Music Fragment"
-        android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+    <ViewFlipper
+        android:id="@+id/viewFlipper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.parse.session.MusicFragment">
+
+
+            <ListView
+                android:id="@+id/artistsListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.parse.session.MusicFragment">
+
+            <Button
+                android:id="@+id/backButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/ic_arrow_back_black_24dp"
+                android:elevation="15dp"
+                android:onClick="Back" />
+
+            <Button
+                android:id="@+id/addArtistButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_above="@+id/similarArtistsListView"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:elevation="15dp"
+                android:onClick="AddArtistToUser"
+                android:text="+" />
+
+            <ListView
+                android:id="@+id/similarArtistsListView"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/artistImageView"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="8dp" />
+
+            <ImageView
+                android:id="@+id/artistImageView"
+                android:layout_width="174dp"
+                android:layout_height="174dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                app:srcCompat="@android:color/background_light" />
+
+            <TextView
+                android:id="@+id/textViewArtistName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/addArtistButton"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="47dp"
+                android:gravity="start"
+                android:text="Getting Artist Info..."
+                android:textAlignment="viewStart"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textViewArtistTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/addArtistButton"
+                android:gravity="start"
+                android:textAlignment="viewStart" />
+
+
+            <ProgressBar
+                android:id="@+id/progressBarImageView"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/textViewArtistTag"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_toLeftOf="@+id/addArtistButton"
+                android:layout_toStartOf="@+id/addArtistButton" />
+
+        </RelativeLayout>
+
+    </ViewFlipper>
+
 
 </RelativeLayout>
