--- a/Session/src/main/res/layout/profile_fragment.xml
+++ b/Session/src/main/res/layout/profile_fragment.xml
@@ -10,4 +10,12 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:id="@+id/usernameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="63dp" />
+
 </RelativeLayout>
