--- a/Session/src/main/res/layout/activity_feed.xml
+++ b/Session/src/main/res/layout/activity_feed.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.parse.session.FeedActivity">
+    tools:context="com.sean.session.FeedActivity">
 
     <ListView
         android:id="@+id/feedListView"
