--- a/Session/src/main/res/layout/activity_main.xml
+++ b/Session/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context="com.sean.session.MainActivity">
 
     <EditText
         android:id="@+id/usernameEditText"
@@ -24,8 +24,7 @@
         android:ems="10"
         android:hint="Enter User Name..."
         android:inputType="textCapSentences|textPersonName"
-        android:layout_marginBottom="136dp"
-        android:layout_above="@+id/passwordEditText"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -35,19 +34,20 @@
         android:ems="10"
         android:hint="Enter Password..."
         android:inputType="textPassword"
-        android:layout_marginBottom="94dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/usernameEditText"
         android:layout_alignLeft="@+id/usernameEditText"
-        android:layout_alignStart="@+id/usernameEditText" />
+        android:layout_alignStart="@+id/usernameEditText"
+        android:layout_marginTop="41dp" />
 
     <Button
         android:id="@+id/signupLoginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
         android:onClick="SignUpLogin"
-        android:text="Signup/Login" />
+        android:text="Signup/Login"
+        android:layout_alignTop="@+id/passwordEditText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="71dp" />
+
 
 </RelativeLayout>
